@@ -1707,6 +1707,24 @@ bool event_handler::handle_event_command(const queued_event& event_info,
 
 	// Display a message dialog
 	else if(cmd == "message") {
+		// Check if this message is for this side
+		std::string side_for_raw = cfg["side_for"];
+		if (!side_for_raw.empty())
+		{
+			assert(state_of_game != 0);
+			side_for_raw = utils::interpolate_variables_into_string(side_for_raw,*state_of_game);
+		
+			std::vector<std::string> side_for =
+				utils::split(side_for_raw, ',', utils::STRIP_SPACES | utils::REMOVE_EMPTY);
+				
+			if (side_for.end() == 
+				std::find(side_for.begin(), side_for.end(), state_of_game->get_variable("side_number") ) )
+			{
+				// We don't want to show this messange if players side isn't in list
+				//break;
+				return rval;
+			}
+		}
 		unit_map::iterator speaker = units->end();
 
 		std::string speaker_str = cfg["speaker"];
